Add slider timer, Add unique keys to all .map iterations, work on responsive design, resolve build errors, add a new card style for section 2, add link to nav contact button, add hero section glowing logo, work on section 3 animation timings, re-adjust robot model responsiveness and z-index according to screen width and section visited

--- a/app/globals.css
+++ b/app/globals.css
@@ -191,14 +191,85 @@ which will wrap the children in the layout */
   }
 }
 
-.CardStyle {
+.CardStyle_text {
 @apply border
 p-4 rounded-[10px]
 flex justify-start flex-col pb-8 transition-all duration-75 ease-linear
+}
+
+.CardStyle_glass {
+  background: rgba(255, 0, 0, 0.01);
+  /* border-radius: 16px; */
+  box-shadow: 0 4px 30px rgba(255, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  /* border: 1px solid rgba(255, 255, 255, 0.07); */
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top:0;
+  left:0;
+  content: "";
+}
+
+.CardStyle_glass:hover {
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+}
+
+.CardStyle_cont {
+  background-image: url("/image/image_card.jpg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+#section5_container::before {
+  background-image: url("/image/image_1_section.jpg");
+  background-position: center;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  position: absolute;
+  height: 100%;
+  width: 70%;
+  top:0;
+  left:0;
+  content: "";
+  border: 1px solid white;
+  opacity: 0.07;
 
 }
 
 
+#section6_container::before {
+  background-image: url("/image/image_2_section.jpg");
+  background-position: center;
+  background-size: 80%;
+  /* background-repeat: no-repeat; */
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top:0;
+  left:0;
+  content: "";
+  opacity: 0.05;
+  z-index: 0;
+
+}
+
+#section6_container::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 110%;
+  left: 0%;
+  top:0%;
+  background: rgb(0,0,0);
+  /* transform: translate(-50%, -50%); */
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(109,52,164,0) 30%);
+  z-index: 1;
+}
 
 .CardStyle_bg_1 {
 @apply hover:bg-[rgba(23,201,255,0.15)] bg-[rgba(23,201,255,0.08)] border-[rgba(23,216,255,0.17)]
@@ -771,9 +842,13 @@ button {
 .thumbnail .item .content{
   color: #fff;  /*thumbs content text color*/
   position: absolute;
-  bottom: 10px;
-  left: 10px;
-  right: 10px;
+  /* bottom: 10px; */
+  /* left: 10px; */
+  /* right: 10px; */
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
 .thumbnail .item .content .title{
   font-weight: 500;
@@ -1034,4 +1109,93 @@ button {
   background-color: #070707;
 
 
+}
+
+
+
+/* ////////////////////////////////////////////////////////////////////// */
+.GradBorderButton_wrapper {
+
+  position: relative;
+
+  width: 4.5rem;
+  height: 2.9rem;
+
+  border-radius: 10px;
+
+  background-color: black;
+  /* padding: 20px; */
+  /* font-size: 1.5rem; */
+
+
+
+}
+
+.GradBorderButton {
+
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  bottom: 1px;
+  left: 1px;
+
+  background: linear-gradient(-90deg, #007cf0, #00dfd8, #ff0080, #007cf0);
+  background-size: 400% 100%;
+  animation: AppleGradButton_anim 8s ease-in-out infinite;
+
+  border-radius: inherit;
+}
+
+
+@keyframes AppleGradButton_anim {
+  50% {
+      background-position: 140% 50%;
+      transform: skew(-2deg);
+  }
+}
+
+
+.GradBorderButton::before {
+  content: "";
+  position: absolute;
+  background-size: inherit;
+  background-image: inherit;
+  animation: inherit;
+  left: 0;
+  right: 0;
+  top: 1px;
+  height: 100%;
+  filter: blur(.5rem);
+}
+
+.GradBorderButton_text {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  /* border: 1px solid wheat; */
+  height: 100%;
+  width: 100%;
+
+  /* font-size: 1em; */
+  /* padding: 0px 10px; */
+  /* padding-top: 3px; */
+
+  /* background-color: black; */
+  /* border-radius: 9px; */
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block; */
+  transition: all 0.5s linear;
+}
+
+.GradBorderButton_text:hover {
+  box-shadow: 0 2px 30px rgba(255, 255, 255, 0.5);
 }
